--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ before_script:
   - "apt get intall nodejs-legacy"
   - "npm install http-server -g"
   - "openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -keyout key.pem -out cert.pem"
-script:
-  - "http-server -S"
-stage: build
+job1:
+  script:
+    - "http-server -S"
