--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,8 @@
 .idea/dictionaries
 
 # Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+.idea/
+
 vcs.xml
 misc.xml
 museoAr.iml
@@ -110,3 +105,7 @@ $RECYCLE.BIN/
 *.iml
 
 v4l2loopback/
+
+cert\.pem
+
+key\.pem
