--- a/assets/measureIt.item.json
+++ b/assets/measureIt.item.json
@@ -8,14 +8,14 @@
         "marker":"kanji",
         "scale":"0.5 0.5 0.5",
         "type":"a-box",
-        "onclick":"getDistance('kanji','hiro');",
+        "onclick":"drawDistance('kanji','hiro');",
         "color": "blue"
       },{
         "id": "cube2",
         "marker":"hiro",
         "scale":"0.5 0.5 0.5",
         "type":"a-box",
-        "onclick":"getDistance('hiro','kanji');",
+        "onclick":"drawDistance('hiro','kanji');",
         "color": "orange"
       }]
     }
